Main code quality improvements.