@@ -4,17 +4,18 @@ import dev.vdrenkov.cineledger.models.dtos.CinemaDto;
 import dev.vdrenkov.cineledger.models.entities.Cinema;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Maps cinema domain models to DTO representations used by the API.
  */
-@Component
-public class CinemaMapper {
+public final class CinemaMapper {
     private static final Logger log = LoggerFactory.getLogger(CinemaMapper.class);
+
+    private CinemaMapper() {
+        /* This utility class should not be instantiated */
+    }
 
     /**
      * Maps cinema values to cinema dto values.
@@ -23,8 +24,8 @@ public class CinemaMapper {
      *     cinema entity to transform
      * @return cinema dto result
      */
-    public CinemaDto mapCinemaToCinemaDto(Cinema cinema) {
-        log.info(String.format("The cinema with an id %d is being mapped to a cinema DTO", cinema.getId()));
+    public static CinemaDto mapCinemaToCinemaDto(Cinema cinema) {
+        log.info("Mapping the cinema with an id {} to a cinema DTO", cinema.getId());
         return new CinemaDto(cinema.getId(), cinema.getAddress(), cinema.getCity(), cinema.getAverageRating());
     }
 
@@ -35,8 +36,8 @@ public class CinemaMapper {
      *     cinema list used by the operation
      * @return matching cinema dto values
      */
-    public List<CinemaDto> mapCinemaToCinemaDtoList(List<Cinema> cinemaList) {
-        return cinemaList.stream().map(this::mapCinemaToCinemaDto).collect(Collectors.toList());
+    public static List<CinemaDto> mapCinemaToCinemaDtoList(List<Cinema> cinemaList) {
+        return cinemaList.stream().map(CinemaMapper::mapCinemaToCinemaDto).toList();
     }
 }
 
