@@ -4,30 +4,17 @@ import dev.vdrenkov.cineledger.models.dtos.MovieDto;
 import dev.vdrenkov.cineledger.models.entities.Movie;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Maps movie domain models to DTO representations used by the API.
  */
-@Component
-public class MovieMapper {
+public final class MovieMapper {
     private static final Logger log = LoggerFactory.getLogger(MovieMapper.class);
 
-    private final CategoryMapper categoryMapper;
-
-    /**
-     * Creates a new movie mapper with its required collaborators.
-     *
-     * @param categoryMapper
-     *     category mapper used by the operation
-     */
-    @Autowired
-    public MovieMapper(CategoryMapper categoryMapper) {
-        this.categoryMapper = categoryMapper;
+    private MovieMapper() {
+        /* This utility class should not be instantiated */
     }
 
     /**
@@ -37,10 +24,10 @@ public class MovieMapper {
      *     movie entity to transform
      * @return movie dto result
      */
-    public MovieDto mapMovieToMovieDto(Movie movie) {
-        log.info(String.format("The movie %s is being mapped to a movie DTO", movie.getTitle()));
+    public static MovieDto mapMovieToMovieDto(Movie movie) {
+        log.info("Mapping the movie {} to a movie DTO", movie.getTitle());
         return new MovieDto(movie.getId(), movie.getTitle(), movie.getAverageRating(), movie.getDescription(),
-            movie.getReleaseDate(), movie.getRuntime(), categoryMapper.mapCategoryToCategoryDto(movie.getCategory()));
+            movie.getReleaseDate(), movie.getRuntime(), CategoryMapper.mapCategoryToCategoryDto(movie.getCategory()));
     }
 
     /**
@@ -50,8 +37,8 @@ public class MovieMapper {
      *     movie entities to transform
      * @return matching movie dto values
      */
-    public List<MovieDto> mapMovieListToMovieDtoList(List<Movie> movies) {
-        return movies.stream().map(this::mapMovieToMovieDto).collect(Collectors.toList());
+    public static List<MovieDto> mapMovieListToMovieDtoList(List<Movie> movies) {
+        return movies.stream().map(MovieMapper::mapMovieToMovieDto).toList();
     }
 }
 
