@@ -4,30 +4,17 @@ import dev.vdrenkov.cineledger.models.dtos.ProgramDto;
 import dev.vdrenkov.cineledger.models.entities.Program;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Maps program domain models to DTO representations used by the API.
  */
-@Component
-public class ProgramMapper {
+public final class ProgramMapper {
     private static final Logger log = LoggerFactory.getLogger(ProgramMapper.class);
 
-    private final CinemaMapper cinemaMapper;
-
-    /**
-     * Creates a new program mapper with its required collaborators.
-     *
-     * @param cinemaMapper
-     *     cinema mapper used by the operation
-     */
-    @Autowired
-    public ProgramMapper(CinemaMapper cinemaMapper) {
-        this.cinemaMapper = cinemaMapper;
+    private ProgramMapper() {
+        /* This utility class should not be instantiated */
     }
 
     /**
@@ -37,10 +24,10 @@ public class ProgramMapper {
      *     program entity to transform
      * @return program dto result
      */
-    public ProgramDto mapProgramToProgramDto(Program program) {
-        log.info(String.format("The program with an id %d is being mapped to a program DTO", program.getId()));
+    public static ProgramDto mapProgramToProgramDto(Program program) {
+        log.info("Mapping the program with an id {} to a program DTO", program.getId());
         return new ProgramDto(program.getId(), program.getProgramDate(),
-            cinemaMapper.mapCinemaToCinemaDto(program.getCinema()));
+            CinemaMapper.mapCinemaToCinemaDto(program.getCinema()));
     }
 
     /**
@@ -50,8 +37,8 @@ public class ProgramMapper {
      *     program entities to transform
      * @return matching program dto values
      */
-    public List<ProgramDto> mapProgramListToProgramDtoList(List<Program> programs) {
-        return programs.stream().map(this::mapProgramToProgramDto).collect(Collectors.toList());
+    public static List<ProgramDto> mapProgramListToProgramDtoList(List<Program> programs) {
+        return programs.stream().map(ProgramMapper::mapProgramToProgramDto).toList();
     }
 }
 
