@@ -4,30 +4,17 @@ import dev.vdrenkov.cineledger.models.dtos.UserDto;
 import dev.vdrenkov.cineledger.models.entities.User;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Maps user domain models to DTO representations used by the API.
  */
-@Component
-public class UserMapper {
+public final class UserMapper {
     private static final Logger log = LoggerFactory.getLogger(UserMapper.class);
 
-    private final RoleMapper roleMapper;
-
-    /**
-     * Creates a new user mapper with its required collaborators.
-     *
-     * @param roleMapper
-     *     role mapper used by the operation
-     */
-    @Autowired
-    public UserMapper(RoleMapper roleMapper) {
-        this.roleMapper = roleMapper;
+    private UserMapper() {
+        /* This utility class should not be instantiated */
     }
 
     /**
@@ -37,10 +24,10 @@ public class UserMapper {
      *     user entity to transform
      * @return user dto result
      */
-    public UserDto mapUserToUserDto(User user) {
-        log.info(String.format("The user with username %s is being mapped to a user DTO", user.getUsername()));
+    public static UserDto mapUserToUserDto(User user) {
+        log.info("Mapping the user with username {} to a user DTO", user.getUsername());
         return new UserDto(user.getId(), user.getUsername(), user.getEmail(), user.getFirstName(), user.getLastName(),
-            user.getJoinDate(), roleMapper.mapRolesToRoleDtos(user.getRoles()));
+            user.getJoinDate(), RoleMapper.mapRolesToRoleDtos(user.getRoles()));
     }
 
     /**
@@ -50,8 +37,8 @@ public class UserMapper {
      *     user entities to transform
      * @return matching user dto values
      */
-    public List<UserDto> mapUsersToUserDtos(List<User> users) {
-        return users.stream().map(this::mapUserToUserDto).collect(Collectors.toList());
+    public static List<UserDto> mapUsersToUserDtos(List<User> users) {
+        return users.stream().map(UserMapper::mapUserToUserDto).toList();
     }
 }
 
